# solid

./: .gitignore  solid.cabal  ui.glade
app/: Main.hs
src/Data/: MatrixSpace.hs
src/Data/MatrixSpace/: Native.hs
src/Solid/: Gui.hs  Solver.hs
src/Solid/Gui/: Native.hs
src/Solid/Solver/: Native.hs
test/: Spec.hs
test/Data/MatrixSpace/: Spec.hs
test/Solid/Solver/: Spec.hs
