name: solid
version: 0.1
synopsis: Weights on springs
description: Weights on springs
homepage: https://github.com/A1-Triard/solid#readme
license: Apache
license-file: LICENSE
author: Warlock
maintainer: internalmike@gmail.com
copyright: 2017 Warlock
category: Web
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules: Lib
  build-depends: base >= 4.7 && < 5
  default-extensions: CPP
                    , TemplateHaskell
                    , ViewPatterns
                    , MultiParamTypeClasses
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , StandaloneDeriving
                    , UnicodeSyntax
                    , MagicHash
                    , DefaultSignatures
                    , NegativeLiterals
                    , PatternSynonyms
                    , ParallelListComp
                    , TransformListComp
                    , MonadComprehensions
                    , UnboxedTuples
                    , LambdaCase
                    , EmptyCase
                    , EmptyDataDecls
                    , MultiWayIf
                    , TypeOperators
                    , TypeFamilies
                    , KindSignatures
                    , LiberalTypeSynonyms
                    , ExistentialQuantification
                    , GADTs
                    , DeriveAnyClass
                    , FlexibleContexts
                    , FlexibleInstances
                    , OverloadedStrings
                    , DataKinds
                    , ExplicitForAll
                    , BangPatterns
  include-dirs: include
  ghc-options: -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports
  default-language: Haskell2010

executable solid-demo
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base
               , solid
  default-extensions: CPP
                    , TemplateHaskell
                    , ViewPatterns
                    , MultiParamTypeClasses
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , StandaloneDeriving
                    , UnicodeSyntax
                    , MagicHash
                    , DefaultSignatures
                    , NegativeLiterals
                    , PatternSynonyms
                    , ParallelListComp
                    , TransformListComp
                    , MonadComprehensions
                    , UnboxedTuples
                    , LambdaCase
                    , EmptyCase
                    , EmptyDataDecls
                    , MultiWayIf
                    , TypeOperators
                    , TypeFamilies
                    , KindSignatures
                    , LiberalTypeSynonyms
                    , ExistentialQuantification
                    , GADTs
                    , DeriveAnyClass
                    , FlexibleContexts
                    , FlexibleInstances
                    , OverloadedStrings
                    , DataKinds
                    , ExplicitForAll
                    , BangPatterns
  include-dirs: include
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports
  default-language: Haskell2010

test-suite solid-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: base
               , solid
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-extensions: CPP
                    , TemplateHaskell
                    , ViewPatterns
                    , MultiParamTypeClasses
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , StandaloneDeriving
                    , UnicodeSyntax
                    , MagicHash
                    , DefaultSignatures
                    , NegativeLiterals
                    , PatternSynonyms
                    , ParallelListComp
                    , TransformListComp
                    , MonadComprehensions
                    , UnboxedTuples
                    , LambdaCase
                    , EmptyCase
                    , EmptyDataDecls
                    , MultiWayIf
                    , TypeOperators
                    , TypeFamilies
                    , KindSignatures
                    , LiberalTypeSynonyms
                    , ExistentialQuantification
                    , GADTs
                    , DeriveAnyClass
                    , FlexibleContexts
                    , FlexibleInstances
                    , OverloadedStrings
                    , DataKinds
                    , ExplicitForAll
                    , BangPatterns
  include-dirs: include
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/A1-Triard/solid
